Remove uses os deprecated Class.newInstance
See http://download.java.net/java/jdk9/docs/api/java/lang/Class.html#newInstance--